--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -5,13 +5,174 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/sb-admin-2.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/metisMenu.min.css') }}">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        <a href="{{ path ('login') }}">Login</a>
-        <a href="{{ path ('logout') }}">Logout</a>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    <div id="wrapper">
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>
+            </div>
+            <!-- /.navbar-header -->
+
+            <ul class="nav navbar-top-links navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-envelope fa-fw"></i> <i class="fa fa-caret-down"></i>
+                    </a>
+
+                    <!-- /.dropdown-messages -->
+                </li>
+                <!-- /.dropdown -->
+
+                <!-- /.dropdown -->
+
+                <!-- /.dropdown -->
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                    <!-- /.dropdown-user -->
+                </li>
+                <!-- /.dropdown -->
+            </ul>
+            <!-- /.navbar-top-links -->
+
+            <div class="navbar-default sidebar" role="navigation">
+                <div class="sidebar-nav navbar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li class="sidebar-search">
+                            <div class="input-group custom-search-form">
+                                <input type="text" class="form-control" placeholder="Search...">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </span>
+                            </div>
+                            <!-- /input-group -->
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('member_new') }}"><i class="fa fa-pencil fa-fw"></i> Create a new entry</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('member_index') }}"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
+                        </li>
+                        {#<li>#}
+                            {#<a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>#}
+                            {#<ul class="nav nav-second-level">#}
+                                {#<li>#}
+                                    {#<a href="panels-wells.html">Panels and Wells</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="buttons.html">Buttons</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="notifications.html">Notifications</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="typography.html">Typography</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="icons.html"> Icons</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="grid.html">Grid</a>#}
+                                {#</li>#}
+                            {#</ul>#}
+                            {#<!-- /.nav-second-level -->#}
+                        {#</li>#}
+                        {#<li>#}
+                            {#<a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>#}
+                            {#<ul class="nav nav-second-level">#}
+                                {#<li>#}
+                                    {#<a href="#">Second Level Item</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="#">Second Level Item</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="#">Third Level <span class="fa arrow"></span></a>#}
+                                    {#<ul class="nav nav-third-level">#}
+                                        {#<li>#}
+                                            {#<a href="#">Third Level Item</a>#}
+                                        {#</li>#}
+                                        {#<li>#}
+                                            {#<a href="#">Third Level Item</a>#}
+                                        {#</li>#}
+                                        {#<li>#}
+                                            {#<a href="#">Third Level Item</a>#}
+                                        {#</li>#}
+                                        {#<li>#}
+                                            {#<a href="#">Third Level Item</a>#}
+                                        {#</li>#}
+                                    {#</ul>#}
+                                    {#<!-- /.nav-third-level -->#}
+                                {#</li>#}
+                            {#</ul>#}
+                            {#<!-- /.nav-second-level -->#}
+                        {#</li>#}
+                        {#<li class="active">#}
+                            {#<a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>#}
+                            {#<ul class="nav nav-second-level">#}
+                                {#<li>#}
+                                    {#<a class="active" href="blank.html">Blank Page</a>#}
+                                {#</li>#}
+                                {#<li>#}
+                                    {#<a href="login.html">Login Page</a>#}
+                                {#</li>#}
+                            {#</ul>#}
+                            {#<!-- /.nav-second-level -->#}
+                        {#</li>#}
+                    </ul>
+                </div>
+                <!-- /.sidebar-collapse -->
+            </div>
+            <!-- /.navbar-static-side -->
+        </nav>
+
+        <!-- Page Content -->
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        {% block body %}{% endblock %}
+                    </div>
+                    <!-- /.col-lg-12 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container-fluid -->
+        </div>
+        <!-- /#page-wrapper -->
+
+    </div>
+        {% block javascripts %}
+            <script src="{{ asset('js/jquery.min.js') }}"></script>
+            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('js/metisMenu.min.js') }}"></script>
+            <script src="{{ asset('js/sb-admin-2.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
