--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -26,8 +26,8 @@
     </style>
 {% endblock %}
 {% block body %}
-    <div class="container">
-    <h1>Register list</h1>
+    <div>
+        <h2 class="page-header">Registration List</h2>
     <div class="form-group pull-right">
         <select class="form-control" onchange="getUsers('sort',this.value)">
             <option value="">Sort By Gender</option>
@@ -47,8 +47,8 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
-                <th>Email</th>
-                <th>Phn</th>
+                <th>Last Name</th>
+                <th>Phone No.</th>
                 <th>Gender</th>
                 <th>Address</th>
                 <th>Church</th>
@@ -58,7 +58,7 @@
         <tbody>
         {% for register in registers %}
             <tr>
-                <td><input type='checkbox' value='{{ register.id }}' name='checkedBoxes[]'/><a href="{{ path('member_show', { 'id': register.id }) }}">{{ register.id }}</a></td>
+                <td><a href="{{ path('member_show', { 'id': register.id }) }}">{{ register.id }}</a></td>
                 <td>{{ register.name }}</td>
                 <td>{{ register.email }}</td>
                 <td>{{ register.phn }}</td>
@@ -69,10 +69,10 @@
                     <table>
                         <tr>
                             <td width="80px">
-                                <a href="{{ path('member_show', { 'id': register.id }) }}" class="btn btn-sm btn-default"><i class="fa fa-eye"></i> show</a>
+                                <a href="{{ path('member_show', { 'id': register.id }) }}" class="btn btn-sm btn-success"><i class="fa fa-eye"></i> show</a>
                             </td>
                             <td width="80px">
-                                <a href="{{ path('member_edit', { 'id': register.id }) }}" class="btn btn-sm btn-default"><i class="fa fa-edit"></i> edit </a>
+                                <a href="{{ path('member_edit', { 'id': register.id }) }}" class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> edit </a>
                             </td>
                         </tr>
                     </table>
@@ -82,15 +82,10 @@
         </tbody>
     </table>
     </div>
-    <ul>
-        <li>
-            <a href="{{ path('member_new') }}">Create a new entry</a>
-        </li>
-    </ul>
     </div>
 {% endblock %}
 {% block javascripts %}
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    {{ parent() }}
     <script type="text/javascript">
 //        $(function () {
 //            $("#status").change(function () {
