--- a/app/Resources/views/register/new.html.twig
+++ b/app/Resources/views/register/new.html.twig
@@ -1,16 +1,27 @@
 {% extends 'admin.html.twig' %}
 
 {% block body %}
-    <h1>Register creation</h1>
-
+    <h1 class="page-header">New Registration</h1>
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+    <label>Name</label>
+    {{ form_widget(form.name, { 'attr': {'class': 'form-control'} }) }}
+    <br>
+    <label>Last Name</label>
+    {{ form_widget(form.email, { 'attr': {'class': 'form-control'} }) }}
+    <br>
+    <label>Phone</label>
+    {{ form_widget(form.phn, { 'attr': {'class': 'form-control'} }) }}
+    <br>
+    <label>Gender</label>
+    {{ form_widget(form.gender, { 'attr': {'class': 'form-control'} }) }}
+    <br>
+    <label>Address</label>
+    {{ form_widget(form.address, { 'attr': {'class': 'form-control'} }) }}
+    <br>
+    <label>Church</label>
+    {{ form_widget(form.church, { 'attr': {'class': 'form-control'} }) }}
+    <br>
+        <input type="submit" value="Create" class="btn btn-sm btn-success" />  <a href="{{ path('member_index') }}" class="btn btn-sm btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('member_index') }}">Back to the list</a>
-        </li>
-    </ul>
 {% endblock %}
