--- a/app/Resources/views/register/show.html.twig
+++ b/app/Resources/views/register/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin.html.twig' %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h2 class="page-header">Registration Details</h2>
 
     <table class="table table-striped">
         <tbody>
@@ -36,17 +36,21 @@
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('member_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('member_edit', { 'id': register.id }) }}">Edit</a>
-        </li>
-        <li>
+    <table>
+        <tr>
+        <td>
+            <a href="{{ path('member_edit', { 'id': register.id }) }}" class="btn btn-sm btn-primary">Edit</a>
+        </td>
+            <td>&nbsp;</td>
+        <td>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Delete" class="btn btn-sm btn-danger">
             {{ form_end(delete_form) }}
-        </li>
-    </ul>
+        </td>
+            <td>&nbsp;</td>
+            <td>
+                <a href="{{ path('member_index') }}" class="btn btn-sm btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
+            </td>
+        </tr>
+    </table>
 {% endblock %}
