--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>
+                {#<a class="navbar-brand" href="#"><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>#}
             </div>
             <!-- /.navbar-header -->
 
