--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -71,10 +71,16 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="{{ path('member_index') }}"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="{{ path('member_new') }}"><i class="fa fa-pencil fa-fw"></i> Create a new entry</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('bulk_sms') }}"><i class="fa fa-envelope fa-fw"></i> Send Message to All</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('angular') }}"><i class="fa fa-search fa-fw"></i> Search</a>
                         </li>
                         <li>
                             <a href="{{ path('member_index') }}"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
