--- a/app/Resources/views/register/bulksms.html.twig
+++ b/app/Resources/views/register/bulksms.html.twig
@@ -1,13 +1,18 @@
+{% extends 'admin.html.twig' %}
 {% block body %}
-<h1 class="page-header">New Registration</h1>
+<h2 class="page-header">Message All</h2>
 {{ form_start(form) }}
+    <label>Name</label>
+    {{ form_widget(form.task, { 'attr': {'class': 'form-control'} }) }}
+    <br>
 {#<label>Name</label>#}
 {#{{ form_widget(form.name, { 'attr': {'class': 'form-control'} }) }}#}
 {#<br>#}
 {#<label>Phone</label>#}
 {#{{ form_widget(form.phn, { 'attr': {'class': 'form-control'} }) }}#}
 {#<br>#}
-<input type="submit" value="Create" class="btn btn-sm btn-success" />  <a href="{{ path('member_index') }}" class="btn btn-sm btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
+<input type="submit" value="Send Message" class="btn btn-sm btn-success" />
+    {#<a href="{{ path('member_index') }}" class="btn btn-sm btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>#}
 {{ form_end(form) }}
 
 {% endblock %}
