--- a/app/Resources/views/register/bulksms.html.twig
+++ b/app/Resources/views/register/bulksms.html.twig
@@ -1,5 +1,12 @@
 {% extends 'admin.html.twig' %}
 {% block body %}
+    {% if app.session.flashBag.has('success') %}
+        <div class="alert alert-success">
+            {% for msg in app.session.flashBag.get('success') %}
+                {{ msg }}
+            {% endfor %}
+        </div>
+    {% endif %}
 <h2 class="page-header">Message All</h2>
 {{ form_start(form) }}
     <label>Name</label>
