--- a/app/Resources/views/register/bulksms.html.twig
+++ b/app/Resources/views/register/bulksms.html.twig
@@ -9,7 +9,7 @@
     {% endif %}
 <h2 class="page-header">Message All</h2>
 {{ form_start(form) }}
-    <label>Name</label>
+    <label>Your Message</label>
     {{ form_widget(form.task, { 'attr': {'class': 'form-control'} }) }}
     <br>
 {#<label>Name</label>#}
