--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                {#<a class="navbar-brand" href="#"><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>#}
+                <a class="navbar-brand" href="#"><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>
             </div>
             <!-- /.navbar-header -->
 
@@ -58,14 +58,14 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
+                            {#<div class="input-group custom-search-form">#}
+                                {#<input type="text" class="form-control" placeholder="Search...">#}
+                                {#<span class="input-group-btn">#}
+                                    {#<button class="btn btn-default" type="button">#}
+                                        {#<i class="fa fa-search"></i>#}
+                                    {#</button>#}
+                                {#</span>#}
+                            {#</div>#}
                             <!-- /input-group -->
                         </li>
                         <li>
