--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -75,7 +75,7 @@
                             <a href="{{ path('member_new') }}"><i class="fa fa-pencil fa-fw"></i> Create a new entry</a>
                         </li>
                         <li>
-                            <a href="{{ path('bulk_sms') }}"><i class="fa fa-envelope fa-fw"></i> Send Message to All</a>
+                            <a href="{{ path('bulk_sms') }}"><i class="fa fa-envelope fa-fw"></i> Send Message</a>
                         </li>
                         <li>
                             <a href="{{ path('angular') }}"><i class="fa fa-search fa-fw"></i> Search</a>
