--- a/app/Resources/views/register/bulksms.html.twig
+++ b/app/Resources/views/register/bulksms.html.twig
@@ -7,7 +7,7 @@
             {% endfor %}
         </div>
     {% endif %}
-<h2 class="page-header">Message All</h2>
+<h2 class="page-header">Send message to all registered phone number</h2>
 {{ form_start(form) }}
     <label>Your Message</label>
     {{ form_widget(form.task, { 'attr': {'class': 'form-control'} }) }}
