--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>
+                {#<a class="navbar-brand" href="#"><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>#}
             </div>
             <!-- /.navbar-header -->
 
@@ -39,15 +39,7 @@
 
                 <!-- /.dropdown -->
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-
-                        <li class="divider"></li>
-                        <li><a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                        </li>
-                    </ul>
+                    <a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                     <!-- /.dropdown-user -->
                 </li>
                 <!-- /.dropdown -->
@@ -58,14 +50,14 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
-                            {#<div class="input-group custom-search-form">#}
-                                {#<input type="text" class="form-control" placeholder="Search...">#}
-                                {#<span class="input-group-btn">#}
-                                    {#<button class="btn btn-default" type="button">#}
-                                        {#<i class="fa fa-search"></i>#}
-                                    {#</button>#}
-                                {#</span>#}
-                            {#</div>#}
+                            <div class="input-group custom-search-form">
+                                <input type="text" class="form-control" placeholder="Search...">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </span>
+                            </div>
                             <!-- /input-group -->
                         </li>
                         <li>
@@ -75,7 +67,7 @@
                             <a href="{{ path('member_new') }}"><i class="fa fa-pencil fa-fw"></i> Create a new entry</a>
                         </li>
                         <li>
-                            <a href="{{ path('bulk_sms') }}"><i class="fa fa-envelope fa-fw"></i> Send Message</a>
+                            <a href="{{ path('bulk_sms') }}"><i class="fa fa-envelope fa-fw"></i> Send Message to All</a>
                         </li>
                         <li>
                             <a href="{{ path('angular') }}"><i class="fa fa-search fa-fw"></i> Search</a>
