--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -2,7 +2,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <style>
-        .container{position: relative;}
+        .container-fluid{position: relative;}
         .loading-overlay{
             position: absolute;
             left: 0;
@@ -26,7 +26,7 @@
     </style>
 {% endblock %}
 {% block body %}
-    <div>
+    <div class="container-fluid">
         <h2 class="page-header">Registration List</h2>
     <div class="form-group pull-right">
         <select class="form-control" onchange="getUsers('sort',this.value)">
