--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,18 +1,50 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<header>
-  <div class="container">
-      <div class="row">
-          header
-      </div>
-  </div>
-</header>
+{#<header>#}
+  {#<div class="container">#}
+      {#<div class="row">#}
+          {#&#123;&#35;<nav class="navbar navbar-inverse">&#35;&#125;#}
+              {#&#123;&#35;<div class="container-fluid">&#35;&#125;#}
+                  {#&#123;&#35;<div class="navbar-header">&#35;&#125;#}
+                      {#&#123;&#35;<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">&#35;&#125;#}
+                          {#&#123;&#35;<span class="icon-bar"></span>&#35;&#125;#}
+                          {#&#123;&#35;<span class="icon-bar"></span>&#35;&#125;#}
+                          {#&#123;&#35;<span class="icon-bar"></span>&#35;&#125;#}
+                      {#&#123;&#35;</button>&#35;&#125;#}
+                      {#&#123;&#35;<a class="navbar-brand" href="#">WebSiteName</a>&#35;&#125;#}
+                  {#&#123;&#35;</div>&#35;&#125;#}
+                  {#&#123;&#35;<div class="collapse navbar-collapse" id="myNavbar">&#35;&#125;#}
+                      {#&#123;&#35;<ul class="nav navbar-nav">&#35;&#125;#}
+                          {#&#123;&#35;<li class="active"><a href="#">Home</a></li>&#35;&#125;#}
+                          {#&#123;&#35;<li class="dropdown">&#35;&#125;#}
+                              {#&#123;&#35;<a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>&#35;&#125;#}
+                              {#&#123;&#35;<ul class="dropdown-menu">&#35;&#125;#}
+                                  {#&#123;&#35;<li><a href="#">Page 1-1</a></li>&#35;&#125;#}
+                                  {#&#123;&#35;<li><a href="#">Page 1-2</a></li>&#35;&#125;#}
+                                  {#&#123;&#35;<li><a href="#">Page 1-3</a></li>&#35;&#125;#}
+                              {#&#123;&#35;</ul>&#35;&#125;#}
+                          {#&#123;&#35;</li>&#35;&#125;#}
+                          {#&#123;&#35;<li><a href="#">Page 2</a></li>&#35;&#125;#}
+                          {#&#123;&#35;<li><a href="#">Page 3</a></li>&#35;&#125;#}
+                      {#&#123;&#35;</ul>&#35;&#125;#}
+                      {#&#123;&#35;<ul class="nav navbar-nav navbar-right">&#35;&#125;#}
+                          {#&#123;&#35;<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>&#35;&#125;#}
+                          {#&#123;&#35;<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>&#35;&#125;#}
+                      {#&#123;&#35;</ul>&#35;&#125;#}
+                  {#&#123;&#35;</div>&#35;&#125;#}
+              {#&#123;&#35;</div>&#35;&#125;#}
+          {#&#123;&#35;</nav>&#35;&#125;#}
+      {#</div>#}
+  {#</div>#}
+{#</header>#}
+<section id="screen1">
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="mid-box">
                 <div class="item">
+                    <img src="{{ asset('images/epcs.jpg') }}">
                     <h1>Council</h1>
                     <em>of</em>
                     <h2>Evangelical Presbyterian Church of Sikkim</h2>
@@ -24,7 +56,7 @@
            <span class="link-btn"><a href="#">Get More Information</a> </span>
            <div class="slideDown">
                <ul class="sub-link">
-                   <li><a href="#">North East Presbytery</a></li>
+                   <li><a href="{{ path('member_index') }}" target="_blank">North East Presbytery</a></li>
                    <li><a href="#">West Presbytery</a> </li>
                    <li><a href="#">South Presbytery</a> </li>
                </ul>
@@ -32,9 +64,49 @@
        </div>
     </div>
 </div>
+<nav>
+    <div class="container">
+        <div class="row">
+
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#screen2">About us</a></li>
+            <li><a href="#">Council Committee</a></li>
+            <li><a href="#">EPYFS</a></li>
+            <li><a href="#">Council Women</a></li>
+            <li><a href="#">Council Men</a></li>
+            <li><a href="#">Contact us</a></li>
+         </ul>
+
+        </div>
+    </div>
+</nav>
+</section>
+    <section id="screen2">
+        <div class="container">
+            <h1>Council of EPCS</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id vulputate mauris. Morbi sed fringilla erat, id vestibulum mi. Mauris auctor diam eu pharetra blandit. Nulla lectus turpis, placerat vitae ante a, commodo fermentum dui. Proin malesuada ante risus, at fringilla diam facilisis vel. In feugiat, eros commodo consectetur bibendum, neque ipsum pellentesque nunc, at egestas quam sapien id ante. Sed tincidunt sagittis luctus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla dictum tempus nunc, eu suscipit dui euismod sit amet. Sed fringilla luctus ante id lacinia. Donec sapien massa, scelerisque eget ipsum dapibus, convallis bibendum nibh. Maecenas viverra augue vel euismod fringilla. Integer maximus orci at lacus rutrum volutpat. In nulla lacus, posuere at hendrerit ut, dapibus non velit.
+            </p>
+        </div>
+
+    </section>
 {% endblock %}
 {% block javascripts %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+{{ parent() }}
+    <script>
+        $(document).ready(function(){
+            $(window).bind('scroll', function() {
+                var navHeight = $( window ).height() - 70;
+                if ($(window).scrollTop() > navHeight) {
+                    $('nav').addClass('fixed');
+                }
+                else {
+                    $('nav').removeClass('fixed');
+                }
+            });
+        });
+    </script>
 <script type="text/javascript">
     $('.link-btn').click(function(e){
         $('.slideDown').slideToggle();
