--- a/web/css/style.css
+++ b/web/css/style.css
@@ -4,6 +4,12 @@ html, body {
   font-size: 16px; }
 
 body {
+  color: #111; }
+
+h1 {
+  font-size: 1.500em; }
+
+#screen1 {
   background: url(../images/background-img.jpg) #213159;
   background-position: center center;
   background-repeat: no-repeat;
@@ -18,12 +24,13 @@ header {
   background: #213159; }
 
 .mid-box {
-  padding-top: 15%; }
+  padding-top: 10%; }
   .mid-box h1 {
     font-family: "Playfair Display", serif;
     font-weight: 700;
     font-size: 3em;
-    line-height: 50px; }
+    line-height: 50px;
+    margin-top: 10px; }
   .mid-box em {
     font-family: "Playfair Display", serif;
     font-weight: 700;
@@ -87,5 +94,39 @@ header {
       border: 1px solid #f0f0f0;
       padding: 10px;
       margin-bottom: 20px; }
+
+nav {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background: #213159;
+  font-family: "Open Sans", sans-serif; }
+  nav li {
+    display: inline-block;
+    padding: 24px 10px;
+    font-size: 0.875em; }
+  nav li a {
+    color: #f0f0f0;
+    text-transform: uppercase; }
+  nav li a:hover {
+    color: #FFF; }
+  nav li a:visited {
+    color: #FFF; }
+
+section {
+  height: 100vh;
+  font-family: "Open Sans", sans-serif; }
+
+#screen2 {
+  padding: 60px 0;
+  line-height: 24px;
+  font-size: 0.875em; }
+
+.fixed {
+  position: fixed;
+  top: 0;
+  height: 70px;
+  z-index: 1; }
 
 /*# sourceMappingURL=style.css.map */
